refactor(preview): 优化线条元素闭合逻辑
- 将 lines 元素闭合时的索引访问改为 getFirst() 方法调用
- 提高代码可读性和性能表现